--- a/src/Contacts/Contacts/MainWindow.xaml
+++ b/src/Contacts/Contacts/MainWindow.xaml
@@ -4,7 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        xmlns:local="clr-namespace:Contacts"
         xmlns:viewModel="clr-namespace:Contacts.ViewModel"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance viewModel:MainVm}"
@@ -20,23 +19,19 @@
         <Grid.Resources>
             <Style TargetType="Border">
                 <Setter Property="Padding"
-                        Value="8">
-                </Setter>
+                        Value="8" />
             </Style>
             <Style TargetType="Button">
                 <Setter Property="Margin"
-                        Value="3">
-                </Setter>
+                        Value="3" />
             </Style>
             <Style TargetType="TextBlock">
                 <Setter Property="Margin"
-                        Value="3">
-                </Setter>
+                        Value="3" />
             </Style>
             <Style TargetType="TextBox">
                 <Setter Property="Margin"
-                        Value="3">
-                </Setter>
+                        Value="3" />
             </Style>
         </Grid.Resources>
         <Grid.ColumnDefinitions>
@@ -66,8 +61,7 @@
                              Margin="3"
                              DisplayMemberPath="LastName"
                              SelectedItem="{Binding .SelectedContact}"
-                             ItemsSource="{Binding .Contacts}">
-                    </ListBox>
+                             ItemsSource="{Binding .Contacts}" />
                     <Grid Grid.Row="2">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
