--- a/src/Contacts/Contacts/App.xaml
+++ b/src/Contacts/Contacts/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="Contacts.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:Contacts"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
 
