--- a/src/Contacts/Contacts/MainWindow.xaml
+++ b/src/Contacts/Contacts/MainWindow.xaml
@@ -71,15 +71,15 @@
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
                         <Button Grid.Column="0"
-                                IsEnabled="{Binding .IsAddEnabled}"
+                                IsEnabled="{Binding .AddEnabled}"
                                 Command="{Binding .AddCommand}"
                                 Content="Add" />
                         <Button Grid.Column="1"
-                                IsEnabled="{Binding .IsEditEnabled}"
+                                IsEnabled="{Binding .EditEnabled}"
                                 Command="{Binding .EditCommand}"
                                 Content="Edit" />
                         <Button Grid.Column="2"
-                                IsEnabled="{Binding .IsRemoveEnabled}"
+                                IsEnabled="{Binding .RemoveEnabled}"
                                 Command="{Binding .RemoveCommand}"
                                 Content="Remove" />
                         <Button Grid.Column="3"
@@ -112,16 +112,16 @@
                         <StackPanel Grid.Column="1"
                                     Grid.Row="0">
                             <TextBlock Text="Name:" />
-                            <TextBox Name="TbName" IsReadOnly="{Binding .IsReadOnly}"
+                            <TextBox Name="TbName" IsReadOnly="{Binding .ReadOnly}"
                                      Text="{Binding SelectedContact.LastName, UpdateSourceTrigger=Explicit}" />
                             <TextBlock Text="Phone Number:" />
                             <TextBox Name="TbPhone"
                                 Text="{Binding SelectedContact.Phone, UpdateSourceTrigger=Explicit}"
-                                IsReadOnly="{Binding .IsReadOnly}" />
+                                IsReadOnly="{Binding .ReadOnly}" />
                             <TextBlock Text="Email:" />
                             <TextBox Name="TbEmail"
                                 Text="{Binding SelectedContact.Email, UpdateSourceTrigger=Explicit}"
-                                IsReadOnly="{Binding .IsReadOnly}" />
+                                IsReadOnly="{Binding .ReadOnly}" />
                         </StackPanel>
                         <Button Grid.Row="1"
                                 Grid.Column="0"
