--- a/src/Contacts/Contacts/MainWindow.xaml
+++ b/src/Contacts/Contacts/MainWindow.xaml
@@ -12,7 +12,7 @@
         Height="550"
         Width="800">
     <Window.Resources>
-        <view:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <view:NegativeBoolToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Window.Resources>
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Closing">
@@ -130,14 +130,18 @@
                                      UpdateSourceTrigger=Explicit}"
                                      IsReadOnly="{Binding .ReadOnly}" />
                         </StackPanel>
-                        <Button Grid.Row="1"
-                                Grid.Column="1"
-                                Visibility="{Binding .ApplyVisibility, 
+                        <StackPanel Grid.Column="1"
+                                    Grid.Row="1"
+                                    Orientation="Horizontal">
+                            <Button
+                                Visibility="{Binding .ReadOnly, 
                                 Converter={StaticResource BooleanToVisibilityConverter}}"
                                 Click="ApplyButton_OnClick"
                                 Command="{Binding .ApplyCommand}"
                                 CommandParameter="{Binding .SelectedContact}"
-                                Content="Apply" />
+                                Content="Apply"
+                                Width="100" />
+                        </StackPanel>
                     </Grid>
                 </StackPanel>
             </Border>
