--- a/src/Contacts/Contacts/MainWindow.xaml
+++ b/src/Contacts/Contacts/MainWindow.xaml
@@ -117,17 +117,14 @@
                             <TextBlock Text="Name:" />
                             <TextBox Name="TbName"
                                      IsReadOnly="{Binding .ReadOnly}"
-                                     Text="{Binding SelectedContact.LastName, 
-                                     UpdateSourceTrigger=Explicit}" />
+                                     Text="{Binding SelectedContact.LastName, UpdateSourceTrigger=PropertyChanged}" />
                             <TextBlock Text="Phone Number:" />
                             <TextBox Name="TbPhone"
-                                     Text="{Binding SelectedContact.Phone, 
-                                     UpdateSourceTrigger=Explicit}"
+                                     Text="{Binding SelectedContact.Phone}"
                                      IsReadOnly="{Binding .ReadOnly}" />
                             <TextBlock Text="Email:" />
                             <TextBox Name="TbEmail"
-                                     Text="{Binding SelectedContact.Email, 
-                                     UpdateSourceTrigger=Explicit}"
+                                     Text="{Binding SelectedContact.Email}"
                                      IsReadOnly="{Binding .ReadOnly}" />
                         </StackPanel>
                         <StackPanel Grid.Column="1"
