--- a/src/Contacts/Contacts/Controls/ContactControl.xaml
+++ b/src/Contacts/Contacts/Controls/ContactControl.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModel="clr-namespace:Contacts.ViewModel"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d"
              d:DesignWidth="300"
              d:DataContext="{d:DesignInstance viewModel:ContactViewModel}"
@@ -67,9 +68,10 @@
                                  Style="{StaticResource TextBoxInError}"
                                  Text="{Binding .Name, UpdateSourceTrigger=PropertyChanged}" />
                         <TextBlock Text="Phone Number:" />
-                        <TextBox Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"
-                                 Style="{StaticResource TextBoxInError}"
-                                 IsReadOnly="{Binding .ReadOnly}" />
+                        <xctk:MaskedTextBox Mask="+7 (000) 000-00-00"
+                                            Text="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"
+                                            Style="{StaticResource TextBoxInError}"
+                                            IsReadOnly="{Binding .ReadOnly}" />
                         <TextBlock Text="Email:" />
                         <TextBox Text="{Binding .Email, UpdateSourceTrigger=PropertyChanged}"
                                  Style="{StaticResource TextBoxInError}"
