--- a/src/Contacts/View/MainWindow.xaml
+++ b/src/Contacts/View/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:view="clr-namespace:Contacts.View"
         xmlns:controls="clr-namespace:Contacts.Controls"
         xmlns:model1="clr-namespace:Contacts.Model;assembly=Model"
-        xmlns:viewModel="clr-namespace:ViewModel.ViewModel;assembly=ViewModel"
+        xmlns:viewModel="clr-namespace:ViewModel;assembly=ViewModel"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance viewModel:MainViewModel}"
         Title="Contacts"
